"final" updates (listings, trs comments)

--- a/handout.tex
+++ b/handout.tex
@@ -25,6 +25,9 @@
 \definecolor{gray}{rgb}{0.5,0.5,0.5}
 \definecolor{mauve}{rgb}{0.58,0,0.82}
 
+\crefname{lstlisting}{listing}{listings}
+\Crefname{lstlisting}{Listing}{Listings}
+
 \lstset{ %
   language=R,                % the language of the code
    basicstyle=\normalsize\ttfamily,           % the size of the fonts that are used for the code
@@ -393,7 +396,7 @@ marginal total of the small area constraint, $s$
 (Table \ref{t:s}) and $mT(n)_{i}$ is the marginal total of category
 $j$ of the aggregated results of the weighted
 microdata, $m$ (Table \ref{t:m}).
-$n$ represents the contraint number.
+$n$ represents the constraint number.
 
 Do not worry about completely understanding the above procedure for now, its
 meaning will probably take time to sink in.
