updates before Cambridge course

--- a/handout.tex
+++ b/handout.tex
@@ -1432,7 +1432,7 @@ or status.
 % \fancyhead[LO,RE]{\emph{Bibliography}}
 \bibliographystyle{plainnat}  % Use the "unsrtnat" BibTeX style for
 % \bibliography{library, lincluded}  % The references (bibliography) information are stored
-\bibliography{Microsimulation}  \label{Bibliography}
+\bibliography{/home/robin/Documents/Microsimulation.bib}  \label{Bibliography}
 % ,Microsimulation.bib
 % /home/robin/Documents/Microsimulation.bib
 
